# pygame-project

./: pyproject.toml
pygame_project/: main.py
