[tool.poetry]
name = "pygame-project"
version = "0.1.0"
description = ""
authors = ["Alexander Ueno <82620144+AluedoSan@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
